--- a/work2.html
+++ b/work2.html
@@ -79,6 +79,7 @@
             result +='<li>'+ value+'</li>';
         }
         target.innerHTML = result;
+        search.value='';
     }
     function out(id){
         target.innerHTML = ' ';
