--- a/work5final.html
+++ b/work5final.html
@@ -257,7 +257,7 @@
     <!-- sixth -->
     <section class="sixth" id="generic">
         <div id="sixth_little">
-            <div class="little_title">
+            <div class="little_title" id="wish">
                 <p>使命与愿景：<span>让旅游回归本质，体验纯粹旅游</span></p>
             </div>
         </div>
