--- a/work5final.html
+++ b/work5final.html
@@ -255,13 +255,13 @@
         <div class="fifth_picture"></div>
     </section>
     <!-- sixth -->
-    <section class="sixth" id="generic">
+    <section class="sixth" id="wish">
         <div id="sixth_little">
-            <div class="little_title" id="wish">
+            <div class="little_title">
                 <p>使命与愿景：<span>让旅游回归本质，体验纯粹旅游</span></p>
             </div>
         </div>
-        <div class="sixth_title" id="wish">
+        <div class="sixth_title" >
             <h2 style="font-size: 36px">使命与愿景</h2>
             <p style="font-size: 16px">让旅游回归本质，体验纯粹旅游</p>
         </div>
