--- a/work5final.html
+++ b/work5final.html
@@ -454,7 +454,8 @@
     <footer>
         <p>苏ICP备14019690号、2014-2017   @苏州英华国际旅游有限公司 版权所有</p>
     </footer>
-</body>
-<script src="js/bootstrap.min.js"></script> 
-<script src="js/jQuery.js"></script>    
+</body>  
+<script src="js/jquery-3.2.1.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/bootstrap.js"></script>
 </html>
