--- a/work5final.html
+++ b/work5final.html
@@ -14,8 +14,8 @@
     <header class="top_black">
         <div class="container">
             <div>
-                <div class="col-md-8"></div>
-                <div class="col-md-4">
+                <div class="col-md-7"></div>
+                <div class="col-md-5">
                     <span><img style="display:inline" src="img/tell.png" alt="客服"/></span>
                     <span style="margin-right: 30px;font-size: 18px"><a>400-808-8682</a></span>
                     <span><a>请登录</a></span>
@@ -117,12 +117,16 @@
         </div>
         <div class="third_pictures" id="generic">
             <div class="picture_left">
-                <div style="height: 383px; background: url(img/hot1.jpg);margin: 0;"></div>  
+                <div style="height: 383px;margin: 0;">
+                    <img class="img-responsive" src="img/hot1.jpg" alt="1">
+                </div>  
                 <div class="left_one">
                     <p>海南三亚5天4晚，纯玩、4晚红树林度假王国</p>
                     <p>￥2580/ 人起</p>
                 </div>
-                <div style="height: 438px;background: url(img/hot2.jpg);margin: 0;"></div>
+                <div style="height: 438px;margin: 0;">
+                    <img class="img-responsive" src="img/hot2.jpg" alt="2">
+                </div>
                 <div class="left_two">
                     <p>德法意欧洲四国，ABCD任意路线由您挑选</p>
                     <p>￥7999/ 人起</p>
@@ -222,7 +226,7 @@
             <div class="little_title">
                 <p>签证推荐</p>
             </div>
-            <div style="width: 100%;height: 310px;">
+            <div style="width: 100%;height: 340px;">
                 <div class="fourth_big">
                     <img class="img-responsive" src="img/visa1.jpg" alt="1">
                     <div class="fourth_cover1">
@@ -256,12 +260,12 @@
     </section>
     <!-- sixth -->
     <section class="sixth" id="wish">
-        <div id="sixth_little">
+        <div id="sixth_little" id="wish2">
             <div class="little_title">
                 <p>使命与愿景：<span>让旅游回归本质，体验纯粹旅游</span></p>
             </div>
         </div>
-        <div class="sixth_title" >
+        <div class="sixth_title" id="wish1">
             <h2 style="font-size: 36px">使命与愿景</h2>
             <p style="font-size: 16px">让旅游回归本质，体验纯粹旅游</p>
         </div>
